# aoxcon-specs

./: README.md  pyproject.toml
config/: aoxcon-chain-profile.json
docs/: audit-conformance-checklist.md  cardano-haskell-reference.md  compatibility-contract.md  conformance-test-matrix.md  core-architecture.md  glossary.md  governance.md  implementation-language-strategy.md  message-spec.md  portfolio-topology.md  protocol-state-machine.md  relayer-spec.md  roadmap.md  sdk-spec.md  security-baseline.md  system-overview.md  whitepaper.md
haskell/aoxcon-cardano-ref/: aoxcon-cardano-ref.cabal
haskell/aoxcon-cardano-ref/app/: Main.hs
haskell/aoxcon-cardano-ref/src/Aoxcon/: Envelope.hs  Errors.hs  FNTTreasury.hs  StateMachine.hs  Types.hs
haskell/aoxcon-cardano-ref/test/: Spec.hs
src/aoxcon_ref/: __init__.py  envelope.py  errors.py  profile.py  state_machine.py
tests/: test_profile.py  test_protocol.py
